# DS_APP

./: .gitignore  App.js  BaseUrlContext.js  README.md  ScreenWrapper.js  Welcome.js  app.json  eas.json  package-lock.json  package.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt
components/StudentSegment/: SFooterNavbar.js  StudentDashboard.js
components/StudentSegment/StServices/: AcademicReportScreen.js  Assessments.js  BotGenie.js  HomeworkScreen.js  Learn.js  NotificationsScreen.js  Planner.js  StatisticalAnalysisScreen.js
components/Under/: UnderDevelopment.js
components/commons/: AcknowledgmentCard.js  ChangePasswordModal.js  Loader.js  SkeletonLoader.js  UnderDevelopment.js
components/commons/info/: Info.js  infoData.json
components/commons/jsonfiles/: bg.json  bg2.json  sbg.json  underdevelopment.json  welcome1.json
components/login/: Help.js  Login.js  RegisterTestUserModal.js
components/slinkedin/: Chat.js  Feed.js  Notifications.js  Profile.js  SLinkedIn.js  SLinkedInNavbar.js  SearchUsers.js
components/slinkedin/AddPost/: AddPost.js
components/slinkedin/Chat/: Chat.js  ChatScreen.js  CreateChat.js  CreateCircle.js
components/teachersegment/: FooterNavbar.js  GetStudentList.js  ParentConnect.js  TeacherDashboard.js
components/teachersegment/Tservices/: GenerateRollNumbersScreen.js  MarkAttendanceScreen.js  NotifyScreen.js  ReportCard.js  ReportCardScreen.js  (+7 more)
my-app/: App.js  app.json  eas.json  package-lock.json  package.json  validateConfig.js
(+21 files in other folders)
